--- a/index.html
+++ b/index.html
@@ -229,12 +229,12 @@
 		<ul>
 				<li data-title="chat Anonymous"><img data-title="" src="https://i.pinimg.com/736x/14/35/2f/14352f73c8529e1b3c819ebd97bcece8.jpg"></li>
 				<li data-title="whatsapp">
-  <a href="https://devmomentnw.github.io/TOOLS.nw/">
+  <a href="https://devmomentnw.github.io/TOOLS.nw">
     <img src="https://th.bing.com/th/id/R.35ffa6e353468280a59e5b4672b8aba0?rik=e5Y6Je9zOSfWrg&riu=http%3a%2f%2flofrev.net%2fwp-content%2fphotos%2f2016%2f06%2fwhatsApp-logo-1.png&ehk=2kmD9AQIuBNDDrrdprGXc3ua6fK6W8wJ%2fiV0VbQhDsI%3d&risl=&pid=ImgRaw&r=0" alt="whatsapp">
   </a>
 </li>
 <li data-title="Instagram">
-  <a href="https://devmomentnw.github.io/TOOLS.nw/">
+  <a href="https://devmomentnw.github.io/TOOLS.nw">
     <img src="https://static.vecteezy.com/system/resources/previews/023/986/555/large_2x/instagram-logo-instagram-logo-transparent-instagram-icon-transparent-free-free-png.png" alt="Instagram">
   </a>
 			</li>
