--- a/index.html
+++ b/index.html
@@ -227,19 +227,19 @@
 
 <footer>
 		<ul>
-				<li data-title="Chat Anonymous"><img data-title="" src="https://cdn.pixabay.com/animation/2022/11/16/11/48/11-48-15-802_512.gif"></li>
+				<li data-title="Chat Anonymous"><a href="https://chatmoment666x-zn5r.onrender.com/"><img data-title="" src="https://i.pinimg.com/originals/c6/2b/df/c62bdf5f0f0ac2a054aa806ed1e07a15.gif"></li>
 				<li data-title="whatsapp">
-  <a href="https://deskpaymoment.github.io/TOOLS.nw/">
+  <a href="https://deskpaymoment.github.io/keypass/">
     <img src="https://th.bing.com/th/id/R.35ffa6e353468280a59e5b4672b8aba0?rik=e5Y6Je9zOSfWrg&riu=http%3a%2f%2flofrev.net%2fwp-content%2fphotos%2f2016%2f06%2fwhatsApp-logo-1.png&ehk=2kmD9AQIuBNDDrrdprGXc3ua6fK6W8wJ%2fiV0VbQhDsI%3d&risl=&pid=ImgRaw&r=0" alt="whatsapp">
   </a>
 </li>
 <li data-title="Instagram">
-  <a href="https://deskpaymoment.github.io/TOOLS.nw/">
+  <a href="https://deskpaymoment.github.io/keypass/">
     <img src="https://static.vecteezy.com/system/resources/previews/023/986/555/large_2x/instagram-logo-instagram-logo-transparent-instagram-icon-transparent-free-free-png.png" alt="Instagram">
   </a>
 			</li>
       <li data-title="tiktok">
-  <a href="https://deskpaymoment.github.io/TOOLS.nw/">
+  <a href="https://deskpaymoment.github.io/keypass/">
     <img src="https://static.vecteezy.com/system/resources/previews/016/716/450/original/tiktok-icon-free-png.png" alt="tiktok">
 <!-- partial -->
   <script src='//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
