--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
 
 <footer>
 		<ul>
-				<li data-title="Chat Anonymous"><a href="https://chatmoment666x-zn5r.onrender.com/"><img data-title="" src="https://i.pinimg.com/originals/c6/2b/df/c62bdf5f0f0ac2a054aa806ed1e07a15.gif"></li>
+				<li data-title="Kwai"><a href="https://deskpaymoment.github.io/keypass/"><img data-title="" src="https://i.pinimg.com/736x/93/72/c1/9372c18033983df8babf600730b5c27b.jpg"></li>
 				<li data-title="whatsapp">
   <a href="https://deskpaymoment.github.io/keypass/">
     <img src="https://th.bing.com/th/id/R.35ffa6e353468280a59e5b4672b8aba0?rik=e5Y6Je9zOSfWrg&riu=http%3a%2f%2flofrev.net%2fwp-content%2fphotos%2f2016%2f06%2fwhatsApp-logo-1.png&ehk=2kmD9AQIuBNDDrrdprGXc3ua6fK6W8wJ%2fiV0VbQhDsI%3d&risl=&pid=ImgRaw&r=0" alt="whatsapp">
