--- a/index.html
+++ b/index.html
@@ -128,8 +128,8 @@
 										<li class="hasSubMenu">brutal insta</li>
 										<li class="hasSubMenu">sms brutal num.</li>
 										<li class="spacer"></li>
-										<li class="noChoice">Hide Path Bar</li>
-										<li class="noChoice shortcut" shortcut="&#x2318;/">Hide Status Bar</li>
+										<li class="noChoice">envio de denunias via aleatorio</li>
+										<li class="noChoice shortcut" shortcut="&#x2318;/">Denuncia suporte ativo</li>
 										<li class="noChoice shortcut" shortcut="&#x2325;&#x2318;S">Hide Sidebar</li>
 										<li class="spacer"></li>
 										<li class="noChoice shortcut" shortcut="&#x2325;&#x2318;T">Toolbar</li>
