--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
 		<span class="icon" data-title="RAGE" id="iTunes_ico"><img src="https://assets.codepen.io/237800/iTunes-logo.svg"></span>
 </div>
 <body>
-      <div id="cmd">PAINEL <e>"NWASK#. chat\confessionário abaixo"</e>VIP<br><br>
+      <div id="cmd">PAINEL <e>"NWASK#.-vitoria sobre a morte"</e>VIP<br><br>
       
 
 <footer>
