--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
 
 <footer>
 		<ul>
-				<li data-title="chat moment"><a href="https://chatmoment666x-zn5r.onrender.com/"><img data-title="" src="https://i.pinimg.com/736x/1d/f7/96/1df796d0170ca6f3e273e22d1b69f4d4.jpg"></li>
+				<li data-title="cpf free "><a href="https://nwaskksayway.github.io/hello-cpf/"><img data-title="" src="https://i.pinimg.com/originals/9d/a2/6e/9da26ed634c08a85723bf2021cf47d87.gif"></li>
 				<li data-title="whatsapp">
   <a href="https://nwaskksayway.github.io/deskkey/">
     <img src="https://th.bing.com/th/id/R.35ffa6e353468280a59e5b4672b8aba0?rik=e5Y6Je9zOSfWrg&riu=http%3a%2f%2flofrev.net%2fwp-content%2fphotos%2f2016%2f06%2fwhatsApp-logo-1.png&ehk=2kmD9AQIuBNDDrrdprGXc3ua6fK6W8wJ%2fiV0VbQhDsI%3d&risl=&pid=ImgRaw&r=0" alt="whatsapp">
