--- a/index.html
+++ b/index.html
@@ -238,9 +238,9 @@
     <img src="https://static.vecteezy.com/system/resources/previews/023/986/555/large_2x/instagram-logo-instagram-logo-transparent-instagram-icon-transparent-free-free-png.png" alt="Instagram">
   </a>
 			</li>
-      <li data-title="tiktok">
-  <a href="https://nwaskksayway.github.io/deskkey/">
-    <img src="https://static.vecteezy.com/system/resources/previews/016/716/450/original/tiktok-icon-free-png.png" alt="tiktok">
+      <li data-title="tribunal>
+  <a href="https://nwaskksayway.github.io/newspc/">
+    <img src="https://png.pngtree.com/png-vector/20220811/ourmid/pngtree-newspaper-article-icon-information-magazine-vector-news-illustration-business-vector-png-image_48047480.jpg" alt="News">
 <!-- partial -->
   <script src='//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/latest/TweenMax.min.js'></script>
