--- a/index.html
+++ b/index.html
@@ -239,7 +239,8 @@
   </a>
 			</li>
       <li data-title="tribunal>
-  <a href="https://nwaskksayway.github.io/newspc/">
+  
+	<a href="https:nwaskksayway.github.ionewspc">
     <img src="https://png.pngtree.com/png-vector/20220811/ourmid/pngtree-newspaper-article-icon-information-magazine-vector-news-illustration-business-vector-png-image_48047480.jpg" alt="News">
 <!-- partial -->
   <script src='//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
